# tcomp-conversions

./: .gitignore  CMakeLists.txt  README.md  afd.cpp  afd.h  afnd.cpp  afnd.h  definitions.cpp  definitions.h  file_reader.cpp  file_reader.h  glud.cpp  glud.h  grammar-sample.txt  main.cpp  printable.cpp  state.h  stringfiable.h  structs.cpp  structs.h  test_inputs.h  utils.cpp  utils.h
v1/: CMakeLists.txt  definitions.h  glud.cpp  main.cpp  state.cpp  utils.h
v2/: CMakeLists.txt  afd.cpp  afd.h  afnd.cpp  afnd.h  definitions.h  glud.cpp  glud.h  main.cpp  printable.cpp  printable.h  state.cpp  state.h  transition.cpp  transition.h
